# SwarmFlow

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
src/swarmflow/: __init__.py  cli.py  config.py  llm.py  models.py
src/swarmflow/agents/: __init__.py  base.py  leader.py  worker.py
src/swarmflow/dashboard/: __init__.py  app.py
src/swarmflow/dashboard/static/: index.html
src/swarmflow/engine/: __init__.py  graph.py  inbox.py  scheduler.py  state.py  templates.py
src/swarmflow/templates/: __init__.py  hedge-fund.yaml  research-lab.yaml  startup-pitch.yaml
tests/: conftest.py
tests/test_agents/: test_leader.py  test_worker.py
tests/test_engine/: test_config.py  test_inbox.py  test_scheduler.py  test_templates.py
