[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarmflow"
version = "0.1.0"
description = "Lightweight multi-agent swarm orchestration with LangGraph — agents spawn agents, talk to agents, and deliver results."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Hossein"},
]
keywords = ["ai", "agents", "swarm", "langgraph", "multi-agent", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "typer[all]>=0.12.0",
    "rich>=13.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
]

[project.scripts]
swarmflow = "swarmflow.cli:app"

[project.urls]
Homepage = "https://github.com/hossein/SwarmFlow"
Repository = "https://github.com/hossein/SwarmFlow"
Issues = "https://github.com/hossein/SwarmFlow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/swarmflow"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
